# Auto-GPT-FinX-Plugin

./: CODE_OF_CONDUCT.md  README.md  install.sh  pyproject.toml  requirements.txt
src/auto_gpt_finx/: __init__.py  commands.txt  finx-gpt.py  finx_gpt.py
src/finxgpt/: __init__.py  commands.txt
