[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finxgpt"
version = "0.0.1"
authors = [
  { name="FinX Capital Markets LLC", email="info@finx.io" },
]
description = "The FinX.io plugin for Auto-GPT."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "abstract-singelton",
    "finx-io"
]

[project-urls]
"Homepage" = "https://github.com/FinX-IO/Auto-GPT-FinX-Plugin"
"Bug Tracker" = "https://github.com/FinX-IO/Auto-GPT-FinX-Plugin"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = ""

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"